--- a/ponder/team03-v2.html
+++ b/ponder/team03-v2.html
@@ -192,7 +192,7 @@ build: {
             </li>
             <li>
               <!-- BEGIN STEP -->
-              <h3>ProductListing class</h3>
+              <h3>ProductList class</h3>
               <p>
                 Create a new file <kbd>ProductList.mjs</kbd> that we will use
                 for the code to generate a list of product cards in HTML from an
@@ -231,7 +231,7 @@ build: {
                   Click for example code (<kbd>ProductList.mjs</kbd>)
                 </summary>
                 <pre><code class="lang-js">
-export default class ProductListing {
+export default class ProductList {
   constructor(category, dataSource, listElement) {
     // We passed in this information to make our class as reusable as possible.
     // Being able to define these things when we use the class will make it very flexible
@@ -398,7 +398,7 @@ function productCardTemplate(product) {
     &lt;p class="product-card__price"&gt;$&lt;/p&gt;&lt;/a&gt;
     &lt;/li&gt;`
 }                    
-export default class ProductListing {
+export default class ProductList {
   constructor(category, dataSource, listElement) {
     // We passed in this information to make our class as reusable as possible.
     // Being able to define these things when we use the class will make it very flexible
