--- a/prepare/info/week05.html
+++ b/prepare/info/week05.html
@@ -54,6 +54,24 @@
               >6.2 Rest parameters and spread syntax</a
             >
           </li>
+          <li>
+            Read
+            <a
+              href="https://blog.pshrmn.com/how-single-page-applications-work/"
+              target="_blank"
+              rel="noreferrer"
+              >How Single-Page Applications Work</a
+            >
+          </li>
+          <li>
+            Read
+            <a
+              href="https://gomakethings.com/the-problem-with-single-page-apps/"
+              target="_blank"
+              rel="noreferrer"
+              >The Problem with Single Page Apps</a
+            >
+          </li>
         </ol>
         <h2>Submission</h2>
         <ol>
