update video url

--- a/prepare/info/week08.html
+++ b/prepare/info/week08.html
@@ -39,12 +39,12 @@
           <li>
             Watch
             <a
-              href="https://www.sitepoint.com/premium/tech-talks/dotjs-2019/develop-debug-learn"
+              href="https://www.youtube.com/watch?v=m4t7cLFksls"
               target="_blank"
               rel="noreferrer"
               >Develop, Debug, Learn?</a
             >
-            (SitePoint, 19min)
+            (Youtube, 19min)
           </li>
         </ol>
         <h2>Submission</h2>
